--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --cor-de-fundo: #DDA0DD ;
     --fundo-senha: #EE82EE	;
     --fundo-texto: #DA70D6;
-    --borda: #C71585 ;
+    --borda: #BA55D3 ;
     --roboto: 'Bebas Neue', sans-serif;
     --roboto-mono: 'Bebas Neue', monospace;
 }
